--- a/theme/static/theme/styles/components/_grid.scss
+++ b/theme/static/theme/styles/components/_grid.scss
@@ -1,5 +1,6 @@
 // -----------------------------------------------------------------------------
 // This file contains all flexbox grid styles
+// Grid by Philip Walton http://philipwalton.github.io/solved-by-flexbox/demos/grids/
 // -----------------------------------------------------------------------------
 
 /**
