--- a/theme/static/theme/styles/components/_vertical_align.scss
+++ b/theme/static/theme/styles/components/_vertical_align.scss
@@ -1,5 +1,6 @@
 // -----------------------------------------------------------------------------
 // This file contains all flexbox based vertical alignment styles
+// Vertical Align by Philip Walton http://philipwalton.github.io/solved-by-flexbox/demos/vertical-centering/
 // -----------------------------------------------------------------------------
 
 /**
