--- a/theme/static/theme/styles/layout/_footer.scss
+++ b/theme/static/theme/styles/layout/_footer.scss
@@ -23,3 +23,12 @@ footer {
         text-transform: uppercase;
     }
 }
+
+/**
+ *  Footer List
+ */
+footer {
+    ul li {
+        list-style-type: none;
+    }
+}
