--- a/theme/static/theme/styles/components/_breadcrumb.scss
+++ b/theme/static/theme/styles/components/_breadcrumb.scss
@@ -15,6 +15,9 @@
     @include breakpoint($small) {
        padding: 10px 15px 10px 15px; 
     }
+    li {
+        list-style-type: none;
+    }
 }
 
 /**
