--- a/theme/static/theme/styles/components/_lists.scss
+++ b/theme/static/theme/styles/components/_lists.scss
@@ -7,9 +7,9 @@
  */
 ul {
     margin: 15px 0px 15px 0px;
-    padding: 0px;
+    padding: 17px;
     li {
-        list-style-type: none;
+        list-style-type: disc;
     }
     @include breakpoint($medium) {
         margin-top: 5px;
