--- a/theme/static/theme/styles/layout/_offcanvas_nav.scss
+++ b/theme/static/theme/styles/layout/_offcanvas_nav.scss
@@ -12,7 +12,7 @@
   left: 0px;
   width: 0;
   height: 100%;
-  background: $penn-light-blue;
+  background: $penn-off-white;
   overflow-y: auto;
   transition: width 0.2s ease;
   z-index: 9999999;
