adding flex-wrap type

--- a/theme/templates/default.html
+++ b/theme/templates/default.html
@@ -48,39 +48,40 @@
         {% block main %}
         <main class="site-content styleguide {% block main_class %}{% endblock main_class %}">
            <h2>CSS3 Flexbox Layout</h2>
-           <div class="grid  grid--gutters grid--full large-grid--fit grid-responsive grid-cell--center align-center styleguide">
+           <div class="grid  grid--gutters grid--full large-grid--fit grid-cell--center align-center styleguide">
                  <div class="grid__cell"><div class="example">1/4</div></div>
                  <div class="grid__cell"><div class="example">1/4</div></div>
                  <div class="grid__cell"><div class="example">1/4</div></div>
                  <div class="grid__cell"><div class="example">1/4</div></div>
             </div>
-            <div class="grid grid--gutters grid--full large-grid--fit grid-responsive grid-cell--center align-center styleguide">
+            <div class="grid grid--gutters grid--full large-grid--fit grid-cell--center align-center styleguide">
                  <div class="grid__cell"><div class="example">1/3</div></div>
                  <div class="grid__cell"><div class="example">1/3</div></div>
                  <div class="grid__cell"><div class="example">1/3</div></div>
             </div>
-            <div class="grid grid--gutters grid--full large-grid--fit grid-responsive grid-cell--center align-center styleguide">
+            <div class="grid grid--gutters grid--full large-grid--fit grid-cell--center align-center styleguide">
                  <div class="grid__cell"><div class="example">1/2</div></div>
                  <div class="grid__cell"><div class="example">1/2</div></div>
             </div>
-            <div class="grid grid--gutters grid--full large-grid--fit grid-responsive grid-cell--center align-center styleguide">
+            <div class="grid grid--gutters grid--full large-grid--fit grid-cell--center align-center styleguide">
                  <div class="grid__cell"><div class="example">1/1</div></div>
             </div>
             <h2>Typography</h2>
-            <div class="grid grid--full grid--gutters large-grid--fit grid-responsive">
+            <div class="grid grid--full grid--gutters large-grid--fit">
                 <div class="grid__cell">
-                    <p>Paragraphs ParagraphsParagraphsParagraphs ParagraphsParagraphsParagraphs Paragraphs Paragraphs Paragraphs
-                       Paragraphs ParagraphsParagraphsParagraphs ParagraphsParagraphsParagraphs Paragraphs Paragraphs Paragraphs
-                       Paragraphs ParagraphsParagraphsParagraphs ParagraphsParagraphsParagraphs Paragraphs Paragraphs Paragraphs
-                       Paragraphs ParagraphsParagraphsParagraphs ParagraphsParagraphsParagraphs Paragraphs Paragraphs Paragraphs.
+                    <p>Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs
+                        Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs
+                        Paragraphs Paragraphs Paragraphs Paragraphs.
                     </p>
-                    <p>Paragraphs ParagraphsParagraphsParagraphs ParagraphsParagraphsParagraphs Paragraphs Paragraphs Paragraphs.
+                    <p>Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs
+                        Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs
+                        Paragraphs Paragraphs Paragraphs Paragraphs.
                     </p>
-                    <p>Paragraphs ParagraphsParagraphsParagraphs ParagraphsParagraphsParagraphs Paragraphs Paragraphs Paragraphs
-                       Paragraphs ParagraphsParagraphsParagraphs ParagraphsParagraphsParagraphs Paragraphs Paragraphs Paragraphs
-                       Paragraphs ParagraphsParagraphsParagraphs ParagraphsParagraphsParagraphs Paragraphs Paragraphs Paragraphs
-                       Paragraphs ParagraphsParagraphsParagraphs ParagraphsParagraphsParagraphs Paragraphs Paragraphs Paragraphs.
+                    <p>Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs
+                        Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs Paragraphs
+                        Paragraphs Paragraphs Paragraphs Paragraphs.
                     </p>
+                    <p>Paragraphs Paragraphs Paragraphs Paragraphs.</p>
                 </div>
                  <div class="grid__cell">
                     <p>Paragraphs Paragraphs Paragraphs <a href="#">link inside paragraph</a> Paragraphs Paragraphs.</p>
@@ -94,7 +95,7 @@
                  </div>
             </div>
             <h2>Buttons</h2>
-            <div class="grid grid--full grid--gutters large-grid--fit grid-responsive">
+            <div class="grid grid--full grid--gutters large-grid--fit">
                 <div class="grid__cell">
                     <button class="btn-small">Button</button>
                     <button class="btn-medium">Button</button>
@@ -102,7 +103,7 @@
                 </div>
             </div>
             <h2>Forms</h2>
-            <div class="grid grid--full grid--gutters large-grid--fit grid-responsive">
+            <div class="grid grid--full grid--gutters large-grid--fit">
                 <div class="grid__cell">
                     <div class="InputAddOn">
                       <input class="InputAddOn-field">
@@ -128,7 +129,7 @@
                 </div>
             </div>
             <h2>Lists</h2>
-            <div class="grid grid--full grid--gutters large-grid--fit grid-responsive">
+            <div class="grid grid--full grid--gutters large-grid--fit">
                 <div class="grid__cell">
                    <ul>
                     <li>Item A </li>
@@ -143,29 +144,29 @@
                 </div>
             </div>  
             <h2>Tables</h2>
-            <div class="grid grid--full grid--gutters large-grid--fit grid-responsive">
+            <div class="grid grid--full grid--gutters large-grid--fit">
                 <div class="grid__cell">
                     <table class="half-width">
                       <thead>
                         <tr>
-                          <th>Name</th>
-                          <th>Age</th>
-                          <th>Sex</th>
-                          <th>Location</th>
+                          <th>Title</th>
+                          <th>Title</th>
+                          <th>Title</th>
+                          <th>Title</th>
                         </tr>
                       </thead>
                       <tbody>
                         <tr>
-                          <td>Dave Gamache</td>
-                          <td>26</td>
-                          <td>Male</td>
-                          <td>San Francisco</td>
+                          <td>Lorem Ipsum</td>
+                          <td>Lorem Ipsum</td>
+                          <td>Lorem Ipsum</td>
+                          <td>Lorem Ipsum</td>
                         </tr>
                         <tr>
-                          <td>Dwayne Johnson</td>
-                          <td>42</td>
-                          <td>Male</td>
-                          <td>Hayward</td>
+                          <td>Lorem Ipsum</td>
+                          <td>Lorem Ipsum</td>
+                          <td>Lorem Ipsum</td>
+                          <td>Lorem Ipsum</td>
                         </tr>
                       </tbody>
                     </table>
@@ -175,7 +176,7 @@
         {% endblock main %}
         {% block footer %}
         <footer class="no-cl {% block footer_class %}{% endblock footer_class %}">
-          <div class="grid grid--full grid--gutters large-grid--fit grid-responsive">
+          <div class="grid grid--full grid--gutters large-grid--fit">
               <div class="grid__cell">
                     <ul>
                       <li class="footer__list-title">Wharton</li>
