--- a/theme/static/theme/styles/components/_grid.scss
+++ b/theme/static/theme/styles/components/_grid.scss
@@ -8,6 +8,8 @@
  */
 .grid {
   display: flex;
+  flex-wrap: wrap;
+  list-style: none;
 }
 
 /**
@@ -18,35 +20,33 @@
 }
 
 /**
- *  Grid Helpers
+ *  Flex Cells
  */
-.u-1of1 {
-    width: 100%!important;
-    flex: none!important;  
-}
- 
-.u-1of2 {
-    width: 50%!important;
-    flex: none!important;  
-}
- 
-.u-1of3 {
-    width: 33.3333%!important;
-    flex: none!important;
-}
-
-.u-1of4 {
-    width: 25%!important;
-    flex: none!important;
+.grid--flexCells > .grid__cell {
+  display: flex;
 }
 
 /**
- *  Grid Responsive Helper
+ *  Grid Helpers
  */
-.grid-responsive {
-    @include breakpoint($medium) {
-        display: block !important;
-    }
+.u-1of1 {
+    width: 100% !important;
+    flex: none !important;  
+}
+ 
+.u-1of2 {
+    width: 50% !important;
+    flex: none !important;  
+}
+ 
+.u-1of3 {
+    width: 33.3333% !important;
+    flex: none !important;
+}
+
+.u-1of4 {
+    width: 25% !important;
+    flex: none !important;
 }
 
 /**
@@ -134,7 +134,7 @@
 /**
  *  Small to Medium Screens
  */
-@media (min-width: 24em) {
+@media (min-width: 384px) {
   .small-grid--fit > .grid__cell {
     flex: 1;
   }
@@ -155,7 +155,7 @@
 /**
  *  Large Screens
  */
-@media (min-width: 48em) {
+@media (min-width: 768px) {
   .large-grid--fit > .grid__cell {
     flex: 1;
   }
