--- a/theme/static/theme/styles/abstracts/_variables.scss
+++ b/theme/static/theme/styles/abstracts/_variables.scss
@@ -4,44 +4,44 @@
 // -----------------------------------------------------------------------------
 
 /// Wharton Branding Colors
-$penn-blue: rgb(36,54,114) !default;
-$penn-red: rgb(152,30,50) !default;
-$penn-bright-red: rgb(223,82,78) !default;
-$penn-green: rgb(94,179,70) !default;
-$penn-violet: rgb(144,81,155) !default;
-$penn-sky-blue: rgb(14,118,188) !default;
-$penn-orange: rgb(243,117,58) !default;
-$penn-dark-gray: rgb(104,104,104) !default; 
-$penn-light-gray: rgb(170,170,170) !default;
-$penn-light-blue: rgb(176,200,223) !default;
-$penn-taupe: rgb(222,217,194) !default;
-$penn-off-white: rgb(243,243,244) !default;
+$penn-blue: rgb(36,54,114);
+$penn-red: rgb(152,30,50);
+$penn-bright-red: rgb(223,82,78);
+$penn-green: rgb(94,179,70);
+$penn-violet: rgb(144,81,155);
+$penn-sky-blue: rgb(14,118,188);
+$penn-orange: rgb(243,117,58);
+$penn-dark-gray: rgb(104,104,104); 
+$penn-light-gray: rgb(170,170,170);
+$penn-light-blue: rgb(176,200,223);
+$penn-taupe: rgb(222,217,194);
+$penn-off-white: rgb(243,243,244);
 
 /// White & Black
-$white: rgb(255,255,255) !default;
-$black: rgb(0,0,0) !default;
+$white: rgb(255,255,255);
+$black: rgb(0,0,0);
 
 /// Breadcrumb Row
-$breadcrumb-bg: rgb(245,245,245) !default;
-$breadcrumb-text: rgb(170,170,170) !default;
+$breadcrumb-bg: rgb(245,245,245);
+$breadcrumb-text: rgb(170,170,170);
 
 /// Copy text color
-$text-color: rgb(34, 34, 34) !default;
+$text-color: rgb(34, 34, 34);
 
 // Default Theme Fonts
-$penn-font-bold: "HelveticaNeueW02-75Bold", Helvetica, sans-serif !default;
-$penn-font-light: "HelveticaNeueW02-45Ligh", Helvetica, sans-serif !default;
-$penn-font-pal: "Palatino Linotype", Palatino, "Times New Roman", Times, serif !default;
-$penn-font-ultra-light: "HelveticaNeueW01-UltLt", Helvetica, sans-serif !default;
+$penn-font-bold: "HelveticaNeueW02-75Bold", Helvetica, sans-serif;
+$penn-font-light: "HelveticaNeueW02-45Ligh", Helvetica, sans-serif;
+$penn-font-pal: "Palatino Linotype", Palatino, "Times New Roman", Times, serif;
+$penn-font-ultra-light: "HelveticaNeueW01-UltLt", Helvetica, sans-serif;
 
 /*
-$penn-font-ultra-light: "HelveticaNeueW01-UltLt", Helvetica, sans-serif !default;
-$penn-font-medium: "HelveticaNeueW02-65Medi", "Helvetica Neue", Arial, Helvetica, sans-serif !default;
-$penn-font-roma: "HelveticaNeueW02-55Roma", Helvetica, sans-serif !default;
+$penn-font-ultra-light: "HelveticaNeueW01-UltLt", Helvetica, sans-serif;
+$penn-font-medium: "HelveticaNeueW02-65Medi", "Helvetica Neue", Arial, Helvetica, sans-serif;
+$penn-font-roma: "HelveticaNeueW02-55Roma", Helvetica, sans-serif;
 */
 
 /// Container's maximum width
-$max-width: 1450px !default;
-$large: 1250px !default;
-$medium: 850px !default;
-$small: 620px !default;
+$max-width: 1450px;
+$large: 1250px;
+$medium: 850px;
+$small: 620px;
